# ble-hid-bridge

./: CLAUDE.md  CMakeLists.txt  Makefile  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
include/: button_event.h  events.h  hid_parser.h  index_html.h  storage.h  task_base.h
src/: CMakeLists.txt  config.h  hid_parser.cpp  idf_component.yml  main.cpp  storage.cpp  usb_hid_api.cpp  usb_hid_api.h
src/tasks/: button.cpp  button.h  hid_bridge.cpp  hid_bridge.h  led.cpp  led.h  web_server.cpp  web_server.h  web_server_handlers.cpp  wifi.cpp  wifi.h
src/tasks/ble/: ble_connection.cpp  ble_connection.h  ble_types.h  key_remap.cpp  key_remap.h
web/: app.js  base.html  build.py  styles.css
web/components/: app-header.html  danger-zone.html  found-devices.html  hid-stats.html  key-remaps.html  restart-banner.html  saved-devices.html  status-card.html  wifi-form.html
